chore: add tanstack to the dictionary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,12 +27,12 @@
   "cSpell.words": [
     "Authed",
     "middlewares",
-    "nestjs",
     "NEXTAUTH",
     "nextjs",
     "runtimes",
     "superjson",
     "tailwindcss",
+    "tanstack",
     "trpc",
     "TRPC",
     "turborepo",
