feat: adding auth with clerk.com

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "db:push": "prisma db push"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.11.13",
     "@prisma/client": "^4.9.0",
     "@tanstack/react-query": "^4.20.2",
     "@trpc/client": "^10.9.0",
