feat: ache home page using Next.js app directory

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,5 +38,8 @@
     "turborepo",
     "vercel",
     "viniciusjardim"
-  ]
+  ],
+
+  "typescript.tsdk": "node_modules\\typescript\\lib",
+  "typescript.enablePromptUseWorkspaceTsdk": true
 }
