--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "^13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "server-only": "^0.0.1",
     "superjson": "1.9.1",
     "zod": "^3.20.6"
   },
