--- a/.env.example
+++ b/.env.example
@@ -11,4 +11,9 @@
 
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
-DATABASE_URL='add your db connetion string here'
+DATABASE_URL=""
+
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=""
+CLERK_SECRET_KEY=""
+
+NEXT_PUBLIC_SITE_URL=""
