--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "prettier-plugin-tailwindcss": "^0.2.1",
     "prisma": "^4.9.0",
     "tailwindcss": "^3.2.0",
-    "typescript": "^5.0.3"
+    "typescript": "^5.0.3",
+    "vitest": "^0.29.8"
   },
   "ct3aMetadata": {
     "initVersion": "7.7.0"
