chore: support the `ñ` char in asSlug

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,8 +25,8 @@
   },
 
   "cSpell.words": [
-    "aeiouaeiouaoca",
-    "áéíóúâêîôûãõçà",
+    "aeiouaeiouaonca",
+    "áéíóúâêîôûãõñçà",
     "Authed",
     "middlewares",
     "NEXTAUTH",
