--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "^13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9",
     "server-only": "^0.0.1",
     "sharp": "^0.32.0",
     "superjson": "1.9.1",
