--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@clerk/nextjs": "^4.11.13",
     "@prisma/client": "^4.9.0",
     "@tanstack/react-query": "^4.20.2",
+    "@tiptap/extension-placeholder": "^2.0.2",
     "@tiptap/pm": "^2.0.2",
     "@tiptap/react": "^2.0.2",
     "@tiptap/starter-kit": "^2.0.2",
