--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@clerk/nextjs": "^4.11.13",
     "@prisma/client": "^4.9.0",
     "@tanstack/react-query": "^4.20.2",
+    "@tiptap/core": "^2.0.2",
     "@tiptap/extension-placeholder": "^2.0.2",
     "@tiptap/pm": "^2.0.2",
     "@tiptap/react": "^2.0.2",
@@ -29,6 +30,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
+    "sanitize-html": "^2.10.0",
     "server-only": "^0.0.1",
     "sharp": "^0.32.0",
     "superjson": "1.9.1",
@@ -40,6 +42,7 @@
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/sanitize-html": "^2.9.0",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "@typescript-eslint/parser": "^5.53.0",
     "autoprefixer": "^10.4.7",
