--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "prettier": "^2.8.1",
     "prettier-plugin-tailwindcss": "^0.2.1",
     "prisma": "^4.9.0",
+    "sass": "^1.61.0",
     "tailwindcss": "^3.2.0",
     "typescript": "^5.0.3",
     "vitest": "^0.29.8"
