--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@trpc/server": "^10.9.0",
     "@vercel/analytics": "^0.1.11",
     "next": "^13.3.0",
+    "prismjs": "^1.29.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
@@ -39,6 +40,7 @@
     "@types/eslint": "^8.21.1",
     "@types/node": "^18.14.0",
     "@types/prettier": "^2.7.2",
+    "@types/prismjs": "^1.26.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
