feat: support syntax highlight customization

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,6 +27,7 @@
   "cSpell.words": [
     "aeiouaeiouaonca",
     "áéíóúâêîôûãõñçà",
+    "atrule",
     "Authed",
     "middlewares",
     "NEXTAUTH",
@@ -41,6 +42,7 @@
     "TRPC",
     "turborepo",
     "vercel",
+    "Vinícius",
     "viniciusjardim"
   ],
 
