--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "db:push": "prisma db push"
   },
   "dependencies": {
-    "@clerk/nextjs": "^4.11.13",
+    "@clerk/nextjs": "^4.16.4",
+    "@clerk/themes": "^1.6.3",
     "@prisma/client": "^4.13.0",
     "@tanstack/react-query": "^4.20.2",
     "@tiptap/core": "^2.0.2",
