--- a/package.json
+++ b/package.json
@@ -22,21 +22,21 @@
     "@tiptap/pm": "^2.0.2",
     "@tiptap/react": "^2.0.2",
     "@tiptap/starter-kit": "^2.0.2",
-    "@trpc/client": "^10.9.0",
-    "@trpc/next": "^10.9.0",
-    "@trpc/react-query": "^10.9.0",
-    "@trpc/server": "^10.9.0",
+    "@trpc/client": "^10.27.1",
+    "@trpc/next": "^10.27.1",
+    "@trpc/react-query": "^10.27.1",
+    "@trpc/server": "^10.27.1",
     "@vercel/analytics": "^1.0.1",
     "next": "^13.4.3",
     "prismjs": "^1.29.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "sanitize-html": "^2.10.0",
     "server-only": "^0.0.1",
     "sharp": "^0.32.0",
-    "superjson": "1.9.1",
-    "zod": "^3.20.6"
+    "superjson": "^1.12.3",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/eslint": "^8.21.1",
