feat: improve Color Beans page metadata

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,13 +33,13 @@
     "aeiouaeiouaonca",
     "áéíóúâêîôûãõñçà",
     "atrule",
-    "Authed",
+    "authed",
     "middlewares",
     "NEXTAUTH",
     "nextjs",
     "prismjs",
-    "Puyo",
-    "Robotnik",
+    "puyo",
+    "robotnik",
     "runtimes",
     "superjson",
     "tailwindcss",
