feat: add owner privilege check in the APIs

--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,19 @@
-# Since the ".env" file is gitignored, you can use the ".env.example" file to
-# build a new ".env" file when you clone the repo. Keep this file up-to-date
-# when you add new variables to `.env`.
-
-# This file will be committed to version control, so make sure not to have any
-# secrets in it. If you are cloning this repo, create a copy of this file named
+# Since the ".env" file is gitignored, you can use the ".env.example" file to build a new ".env"
+# file when you clone the repo. This file will be committed to version control, so make sure not to
+# have any secrets in it. If you are cloning this repo, create a copy of this file named
 # ".env" and populate it with your secrets.
+#
+# Environment variable need to be in sync in the following places:
+# .env.example
+# .env
+# src/env.mjs
+# Vercel Dashboard (Settings > Environment Variables)
 
-# When adding additional environment variables, the schema in "/src/env.mjs"
-# should be updated accordingly.
-
-# Prisma
-# https://www.prisma.io/docs/reference/database-reference/connection-urls#env
-DATABASE_URL=""
-
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=""
+# Private variables (accessible in the server only)
 CLERK_SECRET_KEY=""
+DATABASE_URL=""
+SITE_OWNER_USER_ID=""
 
+# Public variables (accessible also in the browser)
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=""
 NEXT_PUBLIC_SITE_URL=""
