--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,6 +34,8 @@
     "áéíóúâêîôûãõñçà",
     "atrule",
     "authed",
+    "clsx",
+    "lucide",
     "middlewares",
     "NEXTAUTH",
     "nextjs",
@@ -41,6 +43,7 @@
     "puyo",
     "robotnik",
     "runtimes",
+    "shadcn",
     "superjson",
     "tailwindcss",
     "tanstack",
