--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@clerk/nextjs": "^4.25.2",
     "@clerk/themes": "^1.7.6",
     "@prisma/client": "^5.3.1",
+    "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^4.35.3",
     "@tiptap/core": "^2.1.11",
     "@tiptap/extension-placeholder": "^2.1.11",
@@ -27,6 +28,9 @@
     "@trpc/react-query": "^10.38.4",
     "@trpc/server": "^10.38.4",
     "@vercel/analytics": "^1.0.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "lucide-react": "^0.284.0",
     "next": "^13.5.4",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
@@ -36,6 +40,8 @@
     "server-only": "^0.0.1",
     "sharp": "^0.32.6",
     "superjson": "^1.13.1",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.2"
   },
   "devDependencies": {
