--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@clerk/nextjs": "^4.25.2",
     "@clerk/themes": "^1.7.6",
     "@prisma/client": "^5.3.1",
+    "@t3-oss/env-nextjs": "^0.7.1",
     "@tanstack/react-query": "^4.35.3",
     "@tiptap/core": "^2.1.11",
     "@tiptap/extension-placeholder": "^2.1.11",
@@ -36,7 +37,7 @@
     "server-only": "^0.0.1",
     "sharp": "^0.32.6",
     "superjson": "^1.13.1",
-    "zod": "^3.22.2"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/eslint": "^8.44.3",
@@ -49,7 +50,7 @@
     "@typescript-eslint/parser": "^6.7.2",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.50.0",
-    "eslint-config-next": "^13.5.2",
+    "eslint-config-next": "^13.5.4",
     "postcss": "^8.4.30",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.4",
@@ -59,7 +60,5 @@
     "typescript": "^5.2.2",
     "vitest": "^0.34.5"
   },
-  "ct3aMetadata": {
-    "initVersion": "7.7.0"
-  }
+  "packageManager": "pnpm@8.8.0"
 }
