--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # Since the ".env" file is gitignored, you can use the ".env.example" file to build a new ".env"
-# file when you clone the repo. This file will be committed to version control, so make sure not to
-# have any secrets in it. If you are cloning this repo, create a copy of this file named
-# ".env" and populate it with your secrets.
+# file when you clone the repo. The example file will be committed to version control, so make sure
+# not to have any secrets in it. If you are cloning this repo, create a copy of this file named
+# ".env" and populate it with your variables.
 #
 # Environment variable need to be in sync in the following places:
 # .env.example
@@ -13,6 +13,8 @@
 CLERK_SECRET_KEY=""
 DATABASE_URL=""
 SITE_OWNER_USER_ID=""
+UPLOADTHING_APP_ID=""
+UPLOADTHING_SECRET=""
 
 # Public variables (accessible also in the browser)
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=""
