--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@typescript-eslint/eslint-plugin": "^6.17.0",
     "@typescript-eslint/parser": "^6.17.0",
     "autoprefixer": "^10.4.16",
+    "bun-types": "^1.0.26",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.0.4",
     "postcss": "^8.4.33",
@@ -65,8 +66,6 @@
     "prisma": "^5.7.1",
     "sass": "^1.69.7",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3",
-    "vitest": "^1.1.3"
-  },
-  "packageManager": "pnpm@8.8.0"
+    "typescript": "^5.3.3"
+  }
 }
