chore: change database to Vercel PostgreSQL

--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,8 @@
 
 # Private variables (accessible in the server only)
 CLERK_SECRET_KEY=""
-DATABASE_URL=""
+PG_PRISMA_URL=""
+PG_URL_NON_POOLING=""
 SITE_OWNER_USER_ID=""
 UPLOADTHING_APP_ID=""
 UPLOADTHING_SECRET=""
