--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "postinstall": "prisma generate",
@@ -13,59 +13,59 @@
     "db:push": "prisma db push"
   },
   "dependencies": {
-    "@clerk/nextjs": "^4.29.1",
-    "@clerk/themes": "^1.7.9",
-    "@prisma/client": "^5.7.1",
+    "@clerk/nextjs": "^4.29.12",
+    "@clerk/themes": "^1.7.12",
+    "@prisma/client": "^5.12.1",
     "@radix-ui/react-slot": "^1.0.2",
-    "@t3-oss/env-nextjs": "^0.7.1",
+    "@t3-oss/env-nextjs": "^0.9.2",
     "@tanstack/react-query": "^4.36.1",
-    "@tiptap/core": "^2.1.13",
-    "@tiptap/extension-placeholder": "^2.1.13",
-    "@tiptap/pm": "^2.1.13",
-    "@tiptap/react": "^2.1.13",
-    "@tiptap/starter-kit": "^2.1.13",
-    "@trpc/client": "^10.45.0",
-    "@trpc/next": "^10.45.0",
-    "@trpc/react-query": "^10.45.0",
-    "@trpc/server": "^10.45.0",
-    "@uploadthing/react": "^6.1.0",
-    "@vercel/analytics": "^1.1.1",
+    "@tiptap/core": "^2.3.0",
+    "@tiptap/extension-placeholder": "^2.3.0",
+    "@tiptap/pm": "^2.3.0",
+    "@tiptap/react": "^2.3.0",
+    "@tiptap/starter-kit": "^2.3.0",
+    "@trpc/client": "^10.45.2",
+    "@trpc/next": "^10.45.2",
+    "@trpc/react-query": "^10.45.2",
+    "@trpc/server": "^10.45.2",
+    "@uploadthing/react": "^6.4.4",
+    "@vercel/analytics": "^1.2.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "lucide-react": "^0.306.0",
-    "next": "^14.0.4",
+    "lucide-react": "^0.368.0",
+    "next": "^14.2.1",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.49.2",
-    "sanitize-html": "^2.11.0",
+    "react-hook-form": "^7.51.3",
+    "sanitize-html": "^2.13.0",
     "server-only": "^0.0.1",
-    "sharp": "^0.33.1",
+    "sharp": "^0.33.3",
     "superjson": "^2.2.1",
-    "tailwind-merge": "^2.2.0",
+    "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
-    "uploadthing": "^6.1.1",
+    "uploadthing": "^6.9.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/eslint": "^8.56.1",
-    "@types/node": "^20.10.6",
+    "@types/eslint": "^8.56.9",
+    "@types/node": "^20.12.7",
     "@types/prismjs": "^1.26.3",
-    "@types/react": "^18.2.46",
-    "@types/react-dom": "^18.2.18",
-    "@types/sanitize-html": "^2.9.5",
+    "@types/react": "^18.2.78",
+    "@types/react-dom": "^18.2.25",
+    "@types/sanitize-html": "^2.11.0",
     "@typescript-eslint/eslint-plugin": "^6.17.0",
     "@typescript-eslint/parser": "^6.17.0",
-    "autoprefixer": "^10.4.16",
-    "bun-types": "^1.0.26",
+    "autoprefixer": "^10.4.19",
+    "bun-types": "^1.1.3",
     "eslint": "^8.56.0",
-    "eslint-config-next": "^14.0.4",
-    "postcss": "^8.4.33",
-    "prettier": "^3.1.1",
-    "prettier-plugin-tailwindcss": "^0.5.11",
-    "prisma": "^5.7.1",
-    "sass": "^1.69.7",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3"
+    "eslint-config-next": "^14.2.1",
+    "postcss": "^8.4.38",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.13",
+    "prisma": "^5.12.1",
+    "sass": "^1.75.0",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.4.5"
   }
 }
