--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@clerk/nextjs": "^4.29.12",
     "@clerk/themes": "^1.7.12",
     "@prisma/client": "^5.12.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@t3-oss/env-nextjs": "^0.9.2",
     "@tanstack/react-query": "^4.36.1",
@@ -32,7 +33,7 @@
     "@vercel/analytics": "^1.2.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "lucide-react": "^0.368.0",
+    "lucide-react": "^0.438.0",
     "next": "^14.2.7",
     "prismjs": "^1.29.0",
     "react": "^18.3.1",
