chore: update env example for the new UploadThing variable

--- a/.env.example
+++ b/.env.example
@@ -14,8 +14,7 @@ CLERK_SECRET_KEY=""
 PG_PRISMA_URL=""
 PG_URL_NON_POOLING=""
 SITE_OWNER_USER_ID=""
-UPLOADTHING_APP_ID=""
-UPLOADTHING_SECRET=""
+UPLOADTHING_TOKEN=""
 
 # Public variables (accessible also in the browser)
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=""
