fix: update UploadThing variable in env.msj file

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@
 # not to have any secrets in it. If you are cloning this repo, create a copy of this file named
 # ".env" and populate it with your variables.
 #
-# Environment variable need to be in sync in the following places:
+# Environment variables need to be in sync in the following places:
 # .env.example
 # .env
 # src/env.mjs
