--- a/package.json
+++ b/package.json
@@ -70,5 +70,8 @@
     "sass": "^1.75.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
+  },
+  "resolutions": {
+    "prosemirror-model": "1.22.3"
   }
 }
