--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tanstack/react-query": "^4.36.1",
     "@tiptap/core": "^2.6.6",
     "@tiptap/extension-image": "^2.6.6",
+    "@tiptap/extension-link": "^2.7.4",
     "@tiptap/extension-placeholder": "^2.6.6",
     "@tiptap/pm": "^2.6.6",
     "@tiptap/react": "^2.6.6",
