--- a/package.json
+++ b/package.json
@@ -2,25 +2,29 @@
   "name": "viniciusjardim-com",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --turbo",
+    "check": "next lint && tsc --noEmit",
     "build": "next build",
     "start": "next start",
     "postinstall": "prisma generate",
     "test": "bun test",
     "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "typecheck": "tsc --noEmit",
     "db:studio": "prisma studio",
     "db:push": "prisma db push"
   },
   "dependencies": {
-    "@clerk/nextjs": "^4.29.12",
-    "@clerk/themes": "^1.7.12",
-    "@prisma/client": "^5.12.1",
+    "@clerk/nextjs": "^6.3.0",
+    "@clerk/themes": "^2.1.42",
+    "@prisma/client": "^5.22.0",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
-    "@t3-oss/env-nextjs": "^0.9.2",
-    "@tanstack/react-query": "^4.36.1",
+    "@t3-oss/env-nextjs": "^0.10.1",
+    "@tanstack/react-query": "^5.50.0",
     "@tiptap/core": "^2.6.6",
     "@tiptap/extension-image": "^2.6.6",
     "@tiptap/extension-link": "^2.7.4",
@@ -28,16 +32,16 @@
     "@tiptap/pm": "^2.6.6",
     "@tiptap/react": "^2.6.6",
     "@tiptap/starter-kit": "^2.6.6",
-    "@trpc/client": "^10.45.2",
-    "@trpc/next": "^10.45.2",
-    "@trpc/react-query": "^10.45.2",
-    "@trpc/server": "^10.45.2",
+    "@trpc/client": "^11.0.0-rc.446",
+    "@trpc/react-query": "^11.0.0-rc.446",
+    "@trpc/server": "^11.0.0-rc.446",
     "@uploadthing/react": "^7.0.1",
     "@vercel/analytics": "^1.2.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "geist": "^1.3.1",
     "lucide-react": "^0.438.0",
-    "next": "^14.2.16",
+    "next": "^15.0.3",
     "prismjs": "^1.29.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -49,28 +53,28 @@
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^7.0.1",
-    "zod": "^3.22.4"
+    "zod": "^3.23.3"
   },
   "devDependencies": {
-    "@types/eslint": "^8.56.9",
-    "@types/node": "^20.12.7",
+    "@types/bun": "^1.1.13",
+    "@types/eslint": "^8.56.10",
+    "@types/node": "^22.9.0",
     "@types/prismjs": "^1.26.3",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@types/sanitize-html": "^2.11.0",
-    "@typescript-eslint/eslint-plugin": "^6.17.0",
-    "@typescript-eslint/parser": "^6.17.0",
+    "@typescript-eslint/eslint-plugin": "^8.1.0",
+    "@typescript-eslint/parser": "^8.1.0",
     "autoprefixer": "^10.4.19",
-    "bun-types": "^1.1.3",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "^14.2.1",
-    "postcss": "^8.4.38",
-    "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.13",
-    "prisma": "^5.12.1",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^15.0.3",
+    "postcss": "^8.4.39",
+    "prettier": "^3.3.2",
+    "prettier-plugin-tailwindcss": "^0.6.5",
+    "prisma": "^5.22.0",
     "sass": "^1.75.0",
     "tailwindcss": "^3.4.3",
-    "typescript": "^5.4.5"
+    "typescript": "^5.6.3"
   },
   "resolutions": {
     "prosemirror-model": "1.22.3"
