feat: migrate from Prisma to Drizzle

--- a/.env.example
+++ b/.env.example
@@ -11,8 +11,7 @@
 
 # Private variables (accessible in the server only)
 CLERK_SECRET_KEY=""
-PG_PRISMA_URL=""
-PG_URL_NON_POOLING=""
+DATABASE_URL=""
 SITE_OWNER_USER_ID=""
 UPLOADTHING_TOKEN=""
 
