--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "postinstall": "prisma generate",
     "test": "bun test",
     "lint": "next lint",
-    "db:studio": "prisma studio",
-    "db:push": "prisma db push"
+    "db:studio": "drizzle-kit studio",
+    "db:push": "drizzle-kit push"
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.12",
     "@clerk/themes": "^1.7.12",
     "@hookform/resolvers": "^3.10.0",
+    "@neondatabase/serverless": "^0.10.4",
     "@prisma/client": "^5.12.1",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.4",
@@ -44,6 +45,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.39.1",
     "lucide-react": "^0.438.0",
     "next": "^14.2.16",
     "prismjs": "^1.29.0",
@@ -70,6 +73,7 @@
     "@typescript-eslint/parser": "^6.17.0",
     "autoprefixer": "^10.4.19",
     "bun-types": "^1.1.3",
+    "drizzle-kit": "^0.30.4",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.2.1",
     "postcss": "^8.4.38",
