chore: remove Prisma config and add neondatabase on spell checker

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,10 +12,6 @@
     "source.fixAll.eslint": "explicit"
   },
 
-  "[prisma]": {
-    "editor.defaultFormatter": "Prisma.prisma"
-  },
-
   "search.exclude": {
     "**/dist": true,
     "**/.git": true,
@@ -41,6 +37,7 @@
     "esnext",
     "lucide",
     "middlewares",
+    "neondatabase",
     "nextjs",
     "prismjs",
     "prosemirror",
