--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@t3-oss/env-nextjs": "^0.9.2",
     "@tanstack/react-query": "^4.36.1",
     "@tiptap/core": "^2.6.6",
+    "@tiptap/extension-hard-break": "^2.11.5",
     "@tiptap/extension-image": "^2.6.6",
     "@tiptap/extension-link": "^2.7.4",
     "@tiptap/extension-placeholder": "^2.6.6",
