feat: editor image attributes dialog

--- a/components.json
+++ b/components.json
@@ -11,6 +11,8 @@
   },
   "aliases": {
     "components": "~/components",
-    "utils": "~/helpers/cn"
+    "utils": "~/helpers/cn",
+    "lib": "~/helpers",
+    "hooks": "~/hooks"
   }
 }
