--- a/.env.example
+++ b/.env.example
@@ -17,4 +17,6 @@ UPLOADTHING_TOKEN=""
 
 # Public variables (accessible also in the browser)
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=""
+NEXT_PUBLIC_POSTHOG_HOST=""
+NEXT_PUBLIC_POSTHOG_KEY=""
 NEXT_PUBLIC_SITE_URL=""
