--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "@trpc/react-query": "^10.45.2",
     "@trpc/server": "^10.45.2",
     "@uploadthing/react": "^7.2.1",
-    "@vercel/analytics": "^1.2.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^4.1.0",
@@ -48,6 +47,7 @@
     "drizzle-orm": "^0.39.1",
     "lucide-react": "^0.438.0",
     "next": "^14.2.23",
+    "posthog-js": "^1.218.1",
     "prismjs": "^1.29.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
