--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@trpc/server": "^10.45.2",
     "@uploadthing/react": "^7.2.1",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^4.1.0",
