feat: generate post speech using OpenAI TTS model

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,7 @@
 # Private variables (accessible in the server only)
 CLERK_SECRET_KEY=""
 DATABASE_URL=""
+OPEN_AI_API_KEY=""
 SITE_OWNER_USER_ID=""
 UPLOADTHING_TOKEN=""
 
