--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,6 +27,29 @@
   "css.lint.unknownAtRules": "ignore",
   "scss.lint.unknownAtRules": "ignore",
 
+  /*
+   * Tailwind CSS IntelliSense extension config.
+   * See Prettier plugin config in `prettier.config.cjs`
+   */
+  "tailwindCSS.classAttributes": [
+    "class",
+    "classes",
+    "className",
+    "classNames",
+    ".*Class",
+    ".*Classes",
+    ".*ClassName",
+    ".*ClassNames",
+    ".*Variant",
+    ".*Variants"
+  ],
+  "tailwindCSS.experimental.classRegex": [
+    [
+      "(?:clsx|cva|cn)\\(([^)(]*(?:\\([^)(]*(?:\\([^)(]*(?:\\([^)(]*\\)[^)(]*)*\\)[^)(]*)*\\)[^)(]*)*)\\)",
+      "'([^']*)'"
+    ]
+  ],
+
   "cSpell.words": [
     "aeiouaeiouaonca",
     "áéíóúâêîôûãõñçà",
