--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "test": "bun test",
@@ -72,7 +72,7 @@
     "@types/react-dom": "^19.0.0",
     "@types/sanitize-html": "^2.11.0",
     "autoprefixer": "^10.4.19",
-    "bun-types": "^1.1.3",
+    "bun-types": "^1.2.7",
     "drizzle-kit": "^0.30.4",
     "eslint": "^9.23.0",
     "eslint-config-next": "^15.2.3",
