--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@
 # Environment variables need to be in sync in the following places:
 # .env.example
 # .env
-# src/env.mjs
+# src/env.js
 # Vercel Dashboard (Settings > Environment Variables)
 
 # Private variables (accessible in the server only)
@@ -18,6 +18,7 @@ UPLOADTHING_TOKEN=""
 
 # Public variables (accessible also in the browser)
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=""
+NEXT_PUBLIC_CLERK_SIGN_IN_URL=""
 NEXT_PUBLIC_POSTHOG_HOST=""
 NEXT_PUBLIC_POSTHOG_KEY=""
 NEXT_PUBLIC_SITE_URL=""
