--- a/package.json
+++ b/package.json
@@ -66,12 +66,12 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
+    "@tailwindcss/postcss": "^4.1.3",
     "@types/node": "^20.14.10",
     "@types/prismjs": "^1.26.3",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "@types/sanitize-html": "^2.11.0",
-    "autoprefixer": "^10.4.19",
     "bun-types": "^1.2.8",
     "drizzle-kit": "^0.30.4",
     "eslint": "^9.23.0",
@@ -81,7 +81,7 @@
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "sass": "^1.75.0",
-    "tailwindcss": "^3.4.3",
+    "tailwindcss": "^4.1.3",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.27.0"
   }
