--- a/package.json
+++ b/package.json
@@ -60,7 +60,6 @@
     "sharp": "^0.33.3",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.2.2",
-    "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^7.6.0",
     "zod": "^3.24.2"
   },
@@ -82,6 +81,7 @@
     "prettier-plugin-tailwindcss": "^0.6.11",
     "sass": "^1.75.0",
     "tailwindcss": "^4.1.3",
+    "tw-animate-css": "^1.2.5",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.27.0"
   }
