--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "drizzle-orm": "^0.39.1",
     "lucide-react": "^0.487.0",
     "next": "^15.2.4",
+    "next-themes": "^0.4.6",
     "openai": "^4.86.1",
     "posthog-js": "^1.218.1",
     "prismjs": "^1.29.0",
@@ -58,6 +59,7 @@
     "sanitize-html": "^2.13.0",
     "server-only": "^0.0.1",
     "sharp": "^0.33.3",
+    "sonner": "^2.0.3",
     "superjson": "^2.2.1",
     "tailwind-merge": "^3.1.0",
     "uploadthing": "^7.6.0",
