--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,33 +5,21 @@
       "name": "server debug",
       "type": "node-terminal",
       "request": "launch",
-      "command": "bun run dev",
-      "sourceMaps": true,
-      "sourceMapPathOverrides": {
-        "/turbopack/[project]/*": "${webRoot}/*"
-      }
+      "command": "bun run dev"
     },
     {
       "name": "client debug",
       "type": "chrome",
       "request": "launch",
-      "url": "http://localhost:3000",
-      "webRoot": "${workspaceFolder}",
-      "sourceMaps": true,
-      "sourceMapPathOverrides": {
-        "/turbopack/[project]/*": "${webRoot}/*"
-      }
+      "url": "http://localhost:3000"
     },
     {
       "name": "full stack debug",
-      "type": "node-terminal",
+      "type": "node",
       "request": "launch",
-      "command": "bun run dev",
+      "program": "${workspaceFolder}/node_modules/.bin/next",
+      "runtimeArgs": ["--inspect"],
       "skipFiles": ["<node_internals>/**"],
-      "sourceMaps": true,
-      "sourceMapPathOverrides": {
-        "/turbopack/[project]/*": "${webRoot}/*"
-      },
       "serverReadyAction": {
         "action": "debugWithChrome",
         "killOnServerStop": true,
