--- a/package.json
+++ b/package.json
@@ -68,7 +68,11 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
+    "@happy-dom/global-registrator": "^17.4.4",
     "@tailwindcss/postcss": "^4.1.3",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
     "@types/node": "^20.14.10",
     "@types/prismjs": "^1.26.3",
     "@types/react": "^19.0.0",
