--- a/bunfig.toml
+++ b/bunfig.toml
@@ -1,2 +1,2 @@
 [test]
-preload = ["./happydom.ts", "./testing-library.ts"]
+preload = ["./test-config/happydom.ts", "./test-config/testing-library.ts"]
