--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.39.1",
     "lucide-react": "^0.487.0",
-    "next": "^15.3.0",
+    "next": "^15.3.1-canary.13",
     "next-themes": "^0.4.6",
     "openai": "^4.94.0",
     "posthog-js": "^1.218.1",
