--- a/.env.example
+++ b/.env.example
@@ -21,4 +21,10 @@ NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=""
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=""
 NEXT_PUBLIC_POSTHOG_HOST=""
 NEXT_PUBLIC_POSTHOG_KEY=""
-NEXT_PUBLIC_SITE_URL=""
+
+# Public variables from Vercel
+# (see https://vercel.com/docs/environment-variables/system-environment-variables)
+NEXT_PUBLIC_VERCEL_VERCEL_ENV=""
+NEXT_PUBLIC_VERCEL_GIT_COMMIT_REF=""
+NEXT_PUBLIC_VERCEL_GIT_COMMIT_SHA=""
+NEXT_PUBLIC_VERCEL_URL=""
