--- a/.env.example
+++ b/.env.example
@@ -24,7 +24,7 @@ NEXT_PUBLIC_POSTHOG_KEY=""
 
 # Public variables from Vercel
 # (see https://vercel.com/docs/environment-variables/system-environment-variables)
-NEXT_PUBLIC_VERCEL_VERCEL_ENV=""
+NEXT_PUBLIC_VERCEL_ENV=""
 NEXT_PUBLIC_VERCEL_GIT_COMMIT_REF=""
 NEXT_PUBLIC_VERCEL_GIT_COMMIT_SHA=""
 NEXT_PUBLIC_VERCEL_URL=""
