--- a/.env.example
+++ b/.env.example
@@ -27,4 +27,4 @@ NEXT_PUBLIC_POSTHOG_KEY=""
 NEXT_PUBLIC_VERCEL_ENV=""
 NEXT_PUBLIC_VERCEL_GIT_COMMIT_REF=""
 NEXT_PUBLIC_VERCEL_GIT_COMMIT_SHA=""
-NEXT_PUBLIC_VERCEL_URL=""
+NEXT_PUBLIC_VERCEL_PROJECT_PRODUCTION_URL=""
