--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build": "next build",
     "start": "next start",
     "test": "bun test",
-    "lint": "next lint",
-    "check": "next lint && tsc --noEmit",
+    "lint": "next lint && tsc --noEmit",
+    "check": "next lint && tsc --noEmit && bun test",
     "db:studio": "drizzle-kit studio",
     "db:push": "drizzle-kit push"
   },
@@ -50,7 +50,7 @@
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.39.1",
     "lucide-react": "^0.487.0",
-    "next": "^15.3.1-canary.13",
+    "next": "^15.4.0-canary.39",
     "next-themes": "^0.4.6",
     "openai": "^4.94.0",
     "posthog-js": "^1.218.1",
@@ -79,10 +79,10 @@
     "@types/react": "^19.1.1",
     "@types/react-dom": "^19.0.0",
     "@types/sanitize-html": "^2.11.0",
-    "bun-types": "^1.2.10",
+    "bun-types": "^1.2.13",
     "drizzle-kit": "^0.30.4",
     "eslint": "^9.24.0",
-    "eslint-config-next": "^15.3.0",
+    "eslint-config-next": "^15.4.0-canary.39",
     "eslint-plugin-drizzle": "^0.2.3",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
