--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,27 +4,20 @@ on:
     branches: ['main']
   pull_request:
     branches: ['main']
-
 jobs:
   test:
-    name: Run Tests
+    name: Checks
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v4
-
-      - name: Setup Bun
-        uses: oven-sh/setup-bun@v1
-        with:
-          bun-version: latest
-
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Install bun
+        uses: oven-sh/setup-bun@v2
       - name: Install dependencies
         run: bun install
-
       - name: Create test env file
         run: |
           cp .env.example .env
           perl -pi -e 's/=""/="test"/g' .env
-
-      - name: Run type check and linting
+      - name: Run lint, type check, and tests
         run: bun run check
