--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.39.3",
     "lucide-react": "^0.487.0",
-    "next": "^15.3.3",
+    "next": "^15.4.0-canary.91",
     "next-themes": "^0.4.6",
     "openai": "^4.104.0",
     "posthog-js": "^1.251.0",
@@ -79,10 +79,10 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@types/sanitize-html": "^2.16.0",
-    "bun-types": "^1.2.16",
+    "bun-types": "^1.2.17",
     "drizzle-kit": "^0.30.6",
     "eslint": "^9.28.0",
-    "eslint-config-next": "^15.3.3",
+    "eslint-config-next": "^15.4.0-canary.91",
     "eslint-plugin-drizzle": "^0.2.3",
     "postcss": "^8.5.5",
     "prettier": "^3.5.3",
