--- a/package.json
+++ b/package.json
@@ -82,11 +82,13 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@types/sanitize-html": "^2.16.0",
+    "babel-plugin-react-compiler": "^19.1.0-rc.2",
     "bun-types": "^1.2.19",
     "drizzle-kit": "^0.31.4",
     "eslint": "^9.32.0",
     "eslint-config-next": "^15.4.4",
     "eslint-plugin-drizzle": "^0.2.3",
+    "eslint-plugin-react-compiler": "^19.1.0-rc.2",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
