--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build": "next build",
     "start": "next start",
     "test": "bun test",
-    "lint": "next lint && tsc --noEmit",
-    "check": "next lint && tsc --noEmit && bun test",
+    "lint": "eslint . && tsc --noEmit",
+    "check": "eslint . && tsc --noEmit && bun test",
     "db:studio": "drizzle-kit studio",
     "db:push": "drizzle-kit push"
   },
@@ -71,7 +71,6 @@
     "zod": "^4.1.12"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.3.1",
     "@happy-dom/global-registrator": "^20.0.0",
     "@tailwindcss/postcss": "^4.1.14",
     "@testing-library/dom": "^10.4.1",
@@ -85,8 +84,8 @@
     "babel-plugin-react-compiler": "^1.0.0",
     "bun-types": "^1.3.1",
     "drizzle-kit": "^0.31.4",
-    "eslint": "^9.37.0",
-    "eslint-config-next": "^15.5.4",
+    "eslint": "^9.38.0",
+    "eslint-config-next": "^16.0.0",
     "eslint-plugin-drizzle": "^0.2.3",
     "eslint-plugin-react-compiler": "^19.1.0-rc.2",
     "postcss": "^8.5.6",
@@ -94,7 +93,6 @@
     "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^4.1.14",
     "tw-animate-css": "^1.4.0",
-    "typescript": "^5.9.3",
-    "typescript-eslint": "^8.46.0"
+    "typescript": "^5.9.3"
   }
 }
