chore: fix typo on build command

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "bun --bun run next dev --experimental-https",
-    "build": "ext build",
+    "build": "next build",
     "start": "next start",
     "test": "bun test",
     "lint": "bunx next typegen && eslint . && tsc --noEmit",
